--- a/Server/package.json
+++ b/Server/package.json
@@ -16,10 +16,13 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest": "^29.6.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
+    "pg": "^8.11.1",
+    "sequelize": "^6.32.1",
     "supertest": "^6.3.3"
   }
 }
